--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -33,7 +33,7 @@
 
 about_dialog.activate.key=A
 about_dialog.activate.text=Activer
-about_dialog.activate.tips=Activer la nouvelle licence PowerFolder
+about_dialog.activate.tips=Activer la nouvelle licence {APPNAME}
 about_dialog.app_description={APPDESCRIPTION}
 about_dialog.check_for_updates.key=M
 about_dialog.check_for_updates.text=Mises \u00e0 jour
@@ -262,7 +262,7 @@ action_open_files_information.description=Ouvrir les informations de fichiers de
 action_open_files_information.key=N
 action_open_files_information.name=Naviguer dans le dossier
 
-action_open_folders_base.description=Ouvrir le r\u00e9pertoire principal de PowerFolder
+action_open_folders_base.description=Ouvrir le r\u00e9pertoire principal de {APPNAME}
 action_open_folders_base.key=R
 action_open_folders_base.name=R\u00e9pertoire
 
@@ -465,13 +465,13 @@ chat_panel.member_joined_folder_at_time={0} a rejoint le dossier {1} \u00e0 {2}
 chat_panel.member_left_folder_at_time={0} a quitt\u00e9 le dossier {1} \u00e0 {2}
 
 #orig#check_status.in_sync_all=All Folders are in sync
-check_status.in_sync_all=Tous les dossiers PowerFolder sont synchronis\u00e9s
+check_status.in_sync_all=Tous les dossiers {APPNAME} sont synchronis\u00e9s
 #orig#check_status.powerfolders={0} in {1} folders
-check_status.powerfolders={0} dans {1} dossier(s) PowerFolder
+check_status.powerfolders={0} dans {1} dossier(s) {APPNAME}
 #orig#check_status.syncing=Syncing {0} folders
-check_status.syncing=Synchronisation de {0} dossier(s) PowerFolder
+check_status.syncing=Synchronisation de {0} dossier(s) {APPNAME}
 #orig#check_status.title=Status of My Folders
-check_status.title=Statut de mon PowerFolder
+check_status.title=Statut de mon {APPNAME}
 
 computers_list.collapse_hint=R\u00e9duire le groupe
 computers_list.expand_hint=Ouvrir le groupe
@@ -822,9 +822,9 @@ folder_auto_create_notice.title=Un nouveau dossier a \u00e9t\u00e9 trouv\u00e9
 folder_create.dialog.select_directory.text=S\u00e9lectionner un r\u00e9pertoire
 
 #orig#folder_exception.dialog.text=Unable to join Folder '{0}'.\nReason\: {1}
-folder_exception.dialog.text=Impossible de joindre le dossier PowerFolder '{0}'.\nRaison\: {1}
+folder_exception.dialog.text=Impossible de joindre le dossier {APPNAME} '{0}'.\nRaison\: {1}
 #orig#folder_exception.dialog.title=Problem with Folder '{0}'
-folder_exception.dialog.title=Probl\u00e8me sur le dossier PowerFolder '{0}'
+folder_exception.dialog.title=Probl\u00e8me sur le dossier {APPNAME} '{0}'
 
 folder_information_card.files.tips=Afficher les d\u00e9tails de fichiers de ce dossier
 folder_information_card.files.title=Fichiers
@@ -1064,12 +1064,12 @@ invitation.utils.unable.write.text=Erreur pendant la cr\u00e9ation de l'invitati
 invitation.utils.unable.write.title=Impossible de cr\u00e9er l'invitation
 
 #orig#invitation_files.description={APPNAME} invitations
-invitation_files.description=Invitations PowerFolder
+invitation_files.description=Invitations {APPNAME}
 
 #orig#limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.dont_autodetect=La limitation de connexion n'est plus d\u00e9tect\u00e9e
 #orig#limited_connection.text={APPNAME} has detected limited connectivity to the network.\nThis may caused by a firewall or router.\nFind out how to improve your connectivity here\:\n{0}
-limited_connection.text=PowerFolder a d\u00e9tect\u00e9 une connexion limit\u00e9 au r\u00e9seau.\nCeci peut provenir d'un logiciel coupe-feu, d'un routeur ou du partage de fichier de Windows.\nPour comprendre le probl\u00e8me, consulter le site suivant (anglais) FAQ.\nhttp\://www.powerfolder.com
+limited_connection.text={APPNAME} a d\u00e9tect\u00e9 une connexion limit\u00e9 au r\u00e9seau.\nCeci peut provenir d'un logiciel coupe-feu, d'un routeur ou du partage de fichier de Windows.\nPour comprendre le probl\u00e8me, consulter le site suivant (anglais) FAQ.\nhttp\://www.powerfolder.com
 #orig#limited_connection.title=Limited connectivity
 limited_connection.title=Connexion limit\u00e9e
 
@@ -1247,7 +1247,7 @@ preferences.dialog.bind=Adresse de l'interface r\u00e9seau
 #orig#preferences.dialog.bind.any=Any
 preferences.dialog.bind.any=Toute
 #orig#preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
-preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par PowerFolder
+preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par {APPNAME}
 preferences.dialog.default_archive_mode.text=Mode d'archivage par d\u00e9faut
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Utiliser la synchronisation diff\u00e9rentielle
@@ -1340,11 +1340,11 @@ preferences.dialog.min_to_sys_tray=Minimiser dans la barre de tâches
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=R\u00e9seau
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to clients in the Local Area Network.<BR>The only connection out will be to the update server.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>That is used to detect the other clients in your LAN.</BODY></HTML>
-preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connecte uniquement les clients PowerFolder du r\u00e9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00e9rifier une mise \u00e0 jour sur le site web de PowerFolder.<BR>Votre coupe-feu d\u00e9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00e9 pour d\u00e9tecter les autres clients PowerFolder de votre r\u00e9seau local (LAN).</BODY></HTML>
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connecte uniquement les clients {APPNAME} du r\u00e9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00e9rifier une mise \u00e0 jour sur le site web de {APPNAME}.<BR>Votre coupe-feu d\u00e9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00e9 pour d\u00e9tecter les autres clients {APPNAME} de votre r\u00e9seau local (LAN).</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Se connecter \u00e0
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
-preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Activer le transfert de fichier \u00e0 travers le LAN et Internet.<BR>Seul(e)s les ami(e)s, les utilisateurs du LAN et des personnes ayant rejoints le dossier de partage sont actuellement connect\u00e9(e)s.<BR>Permet \u00e0 PowerFolder de se connecter aux supernodes pour trouver vos amie(e)s sur Internet.</BODY></HTML>
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Activer le transfert de fichier \u00e0 travers le LAN et Internet.<BR>Seul(e)s les ami(e)s, les utilisateurs du LAN et des personnes ayant rejoints le dossier de partage sont actuellement connect\u00e9(e)s.<BR>Permet \u00e0 {APPNAME} de se connecter aux supernodes pour trouver vos amie(e)s sur Internet.</BODY></HTML>
 preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Activer le transfert de fichier \u00e0 travers Internet uniquement.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Pseudo
@@ -1355,7 +1355,7 @@ preferences.dialog.online_storage.tip=Configurer {APPNAME} pour utiliser le stoc
 #orig#preferences.dialog.open_port=Automatically open Windows Firewall
 preferences.dialog.open_port=Ouvrir automatiquement le coupe-feu Windows
 #orig#preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
-preferences.dialog.open_port.tooltip=D\u00e9clarer les ports de PowerFolder dans le coupe-feu Windows
+preferences.dialog.open_port.tooltip=D\u00e9clarer les ports de {APPNAME} dans le coupe-feu Windows
 #orig#preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.class_name=Nom de la classe Java
 #orig#preferences.dialog.plugin.description=Description
@@ -1373,7 +1373,7 @@ preferences.dialog.plugin.title=Plug-ins
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Trouver un port automatiquement
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
-preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible
+preferences.dialog.randomPort.tooltip={APPNAME} identifiera un port disponible
 #orig#preferences.dialog.restart.restart=Restart Now
 preferences.dialog.restart.restart=Red\u00e9marrer maintenant
 #orig#preferences.dialog.restart.text=Some changes require {APPNAME} to restart.
@@ -1396,7 +1396,7 @@ preferences.dialog.paused_throttle=Contr\u00f4le de la bande passante
 preferences.dialog.paused_throttle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00e9rente de 0)
 preferences.dialog.skin_text=Th\u00e8me
 #orig#preferences.dialog.start_with_windows=Start {APPNAME} with Windows
-preferences.dialog.start_with_windows=D\u00e9marrer PowerFolder \u00e0 l'ouverture de Windows
+preferences.dialog.start_with_windows=D\u00e9marrer {APPNAME} \u00e0 l'ouverture de Windows
 #orig#preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusValidFailed=Echec de la validation DynDns {0}\!
 #orig#preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
@@ -1428,7 +1428,7 @@ preferences.dialog.use_delta_on_lan=sur r\u00e9seau LAN
 preferences.dialog.use_delta_on_lan.tooltip=Activer si le r\u00e9seau est lent ou que vous utilisez un VPN (peut augmenter l'utilisation du processeur)
 preferences.dialog.use_mass_delete=Utiliser la d\u00e9tection d'effacement par lot
 #orig#preferences.dialog.use_pf_icon=Use {APPNAME} icon in Windows
-preferences.dialog.use_pf_icon=Utiliser l'ic\u00f4ne PowerFolder dans Windows
+preferences.dialog.use_pf_icon=Utiliser l'ic\u00f4ne {APPNAME} dans Windows
 preferences.dialog.use_zip_on_internet=sur Internet
 #orig#preferences.dialog.use_zip_on_lan=on LAN
 preferences.dialog.use_zip_on_lan=Utilise la compression ZIP sur le r\u00e9seau local (LAN)
@@ -1538,7 +1538,7 @@ pro.wizard.activation.computers_found=Ordinateur(s) trouv\u00e9(s)\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=Merci de confirmer les informations d'activation suivantes.
 #orig#pro.wizard.activation.contact_support=Contact support
-pro.wizard.activation.contact_support=Contacter le support de PowerFolder
+pro.wizard.activation.contact_support=Contacter le support de {APPNAME}
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=Clef de licence invalide
 #orig#pro.wizard.activation.error_reading_file=Error while reading license key file
@@ -1566,13 +1566,13 @@ pro.wizard.activation.number_of_computers=Ordinateurs autoris\u00e9s
 #orig#pro.wizard.activation.one_key_available=Login successful. One license key found.
 pro.wizard.activation.one_key_available=Login r\u00e9ussi. Clef de licence obtenue.
 #orig#pro.wizard.activation.order_now=Buy {APPNAME} now
-pro.wizard.activation.order_now=Cliquer ici pour commander PowerFolder Pro
+pro.wizard.activation.order_now=Cliquer ici pour commander {APPNAME}
 pro.wizard.activation.password_confirm=Confirmer
 pro.wizard.activation.password_length=Une adresse Email valide ainsi qu'un mot de passe d'au moins 6 caract\u00e8res sont requis.
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
-pro.wizard.activation.please_purchase=merci d'acheter PowerFolder Pro pour r\u00e9activer.
+pro.wizard.activation.please_purchase=merci d'acheter {APPNAME} pour r\u00e9activer.
 #orig#pro.wizard.activation.pro_activation=Activation
-pro.wizard.activation.pro_activation=Activation de PowerFolder Pro
+pro.wizard.activation.pro_activation=Activation de {APPNAME}
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=R\u00e9cup\u00e9rer un mot de passe
 pro.wizard.activation.region=R\u00e9gion
@@ -1586,11 +1586,11 @@ pro.wizard.activation.subscribe_newsletter=Souscrire \u00e0 la lettre d'informat
 #orig#pro.wizard.activation.successful=Activation successful
 pro.wizard.activation.successful=Activation r\u00e9ussie
 #orig#pro.wizard.activation.thanks_activation=Thank you for activating {APPNAME}.
-pro.wizard.activation.thanks_activation=Merci d'avoir activ\u00e9 PowerFolder Pro.
+pro.wizard.activation.thanks_activation=Merci d'avoir activ\u00e9 {APPNAME}.
 #orig#pro.wizard.activation.thanks_additional=Thank you for purchasing additional\n{APPNAME} licenses.
-pro.wizard.activation.thanks_additional=Merci d'avoir achet\u00e9 des licences additionnelles\n de PowerFolder Pro.
+pro.wizard.activation.thanks_additional=Merci d'avoir achet\u00e9 des licences additionnelles\n de {APPNAME}.
 #orig#pro.wizard.activation.thanks_purchase=Thank you for purchasing {APPNAME}.
-pro.wizard.activation.thanks_purchase=Merci d'avoir achet\u00e9 PowerFolder Pro.
+pro.wizard.activation.thanks_purchase=Merci d'avoir achet\u00e9 {APPNAME}.
 #orig#pro.wizard.activation.try_again=Try again
 pro.wizard.activation.try_again=Prolonger l'\u00e9valuation
 #orig#pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
@@ -1829,10 +1829,10 @@ transfers.to=To
 transfers.verifying=V\u00e9rification de la synchronisation
 
 #orig#tray_icon_manager.status_change.connected={APPNAME} is connected
-tray_icon_manager.status_change.connected=PowerFolder est connect\u00e9
+tray_icon_manager.status_change.connected={APPNAME} est connect\u00e9
 tray_icon_manager.status_change.connecting={APPNAME} se connecte
 #orig#tray_icon_manager.status_change.disabled={APPNAME} is disabled
-tray_icon_manager.status_change.disabled=PowerFolder est inactif
+tray_icon_manager.status_change.disabled={APPNAME} est inactif
 #orig#tray_icon_manager.status_change.title=Connection Status
 tray_icon_manager.status_change.title=Etat de la connexion
 
@@ -1899,7 +1899,7 @@ warning_notice.poor_quality=Connexion de mauvaise qualit\u00e9e d\u00e9tect\u00e
 warning_notice.title=Avertissement syst\u00e8me
 
 #orig#winutils.shortcut.description=This shortcut was placed here by {APPNAME}
-winutils.shortcut.description=Raccourci cr\u00e9\u00e9 par PowerFolder
+winutils.shortcut.description=Raccourci cr\u00e9\u00e9 par {APPNAME}
 
 #orig#wizard.basic_setup.computer_name=Name of this computer
 wizard.basic_setup.computer_name=Nom de cet ordinateur
@@ -2043,7 +2043,7 @@ wizard.tell_friend.title.warning_bad_email='{0}' n'est pas une adresse email cor
 wizard.tell_friend.title.warning_title=Adresse incorrecte
 wizard.typical_folder_setup.title=Configurer un dossier
 #orig#wizard.webservice.learn_more=What is cloud space?
-wizard.webservice.learn_more=Qu'est-ce que l'espace de stockage en ligne de PowerFolder ?
+wizard.webservice.learn_more=Qu'est-ce que l'espace de stockage en ligne de {APPNAME} ?
 #orig#wizard.webservice.login=Login
 wizard.webservice.login=Identifiant de sauvegarde en ligne
 wizard.webservice.mirror_folder=Sauvegarder ce dossier en ligne ?
